kubernetes/apps/default/immich/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - name: envoy-gateway-local
      namespace: network
      sectionName: https
    - name: envoy-gateway-public
      namespace: network
      sectionName: https
  hostnames:
    - immich.egenintres.se
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
